apparently Stream.toList is only for Java 16